Fix root line height
This fixes formatting issues that cropped up in the popup somehow.

--- a/docs/index.css
+++ b/docs/index.css
@@ -4,7 +4,6 @@ body {
   margin: 0;
   font-family: 'Helvetica Neue', Helvetica, sans-serif !important;
   font-size: 12px;
-  line-height: 1.833;
   background-color: #000;
 }
 
